--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -14,9 +14,9 @@ The overall course objective is: *“Learn to think in a manner consistent with 
 My office is located in the Bidgood Hall 319. I can be reached via email: cwhilton@crimson.ua.edu, or cell phone: 615.290.3434. I am highly accessible to answer any questions and prompt in my responses. Please feel free to stop by, email, call, or text. Office availability is by appointment only.  
 
 #### Meeting Information
-- Days: Monday, Tuesday, Wednesday, Thursday, Friday (Lab)
-- Time: 10:00 AM - 11:45 AM
-- Location: Bidgood 215
+- Days: Tuesday and Thursday
+- Time: 6:30 PM - 7:45 PM
+- Location: Bidgood 340
 
 #### Grading Distribution
 
