--- a/LN-R_Intro_Data.Rmd
+++ b/LN-R_Intro_Data.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lecture Notes - Data Types & Visualization"
 author: "Curry W. Hilton"
-output: html_document
+output: pdf_document
 ---
 
 ## Data Types
