--- a/GA_1.Rmd
+++ b/GA_1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Group Assignment #1'
-author: "Name: __________________"
+author: "Name(s): __________________"
 output: pdf_document
 ---
 
@@ -14,11 +14,6 @@ output: pdf_document
 - *Answer*: How many observations does the 'waiting' variable contain (Hint: number of rows)? 
     - length(...)
 
-```{r}
-# ...
-```
-
-
 ### Q2
 
 - Load the internal R dataset "ipod"
@@ -27,11 +22,6 @@ output: pdf_document
     - view(ipod)
 - *Answer*: What type of variable is 'songLength'?
     - str(...)
-
-```{r}
-# ...
-```
-
 
 ### Q3
 
@@ -43,10 +33,6 @@ pizza <- c(2, 3, 2, 1, 8)
 - Create a new vector 'bp' and assign it the values of multiplying the beers and pizza vectors and then dividing the result by 2
 - *Answer*: What result of the mathematical operation above is the lowest? (The actual number calculated)
 
-```{r}
-# ...
-```
-
 ### Q4 
 
 - Run the following code to assign the data vector, z
@@ -56,7 +42,4 @@ z <- c(4, 5, 9, 8, 2, 9)
 
 - Extract the second through the fourth elements of the vector and assign it the name 'y'
 
-```{r}
-# ...
-```
 
