--- a/GA_2.Rmd
+++ b/GA_2.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Group Assignment #2'
-author: "Curry W. Hilton"
-output: html_document
+author: 'Name(s): _________________'
+output: pdf_document
 ---
 
 ### Q1
